syntax = "proto3";

package grpc;

service User {
    rpc GetUserWithId(GetUserReq) returns (GetUserRsp) {}
}

message GetUserReq {
    int64 Id = 1;
}

message GetUserRsp {
	int64 Id = 1;
    string Username = 2;
    string LastName   = 3;
    string FirstName  = 4;
}